style intro section layout alignment issues

--- a/style.css
+++ b/style.css
@@ -58,9 +58,9 @@ a {
 
 .intro-section {
   width: 100%;
-  height: 90%;
+  height: 100%;
   display: flex;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   flex-direction: column;
   align-items: center;
   margin-top: 80px;
